--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+      "serve": "vue-cli-service serve",
+      "build": "vue-cli-service build",
+      "lint": "vue-cli-service lint"
+
+
+
   },
   "repository": {
     "type": "git",
@@ -21,6 +28,10 @@
   "homepage": "https://github.com/ntua/SoftEng22-22#readme",
   "dependencies": {
     "axios": "^1.2.3",
+    "connect-flash": "^0.1.1",
+    "custom-env": "^2.0.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "vue": "^3.2.45"
   }
 }
