--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-      "serve": "vue-cli-service serve",
-      "build": "vue-cli-service build",
-      "lint": "vue-cli-service lint"
-
-
-
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -27,11 +24,14 @@
   },
   "homepage": "https://github.com/ntua/SoftEng22-22#readme",
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
     "axios": "^1.2.3",
     "connect-flash": "^0.1.1",
     "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "vue": "^3.2.45"
+    "pinia": "^2.0.29",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   }
 }
