--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.8.4",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
