--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   "dependencies": {
     "@vue/cli-service": "^5.0.8",
     "axios": "^1.2.3",
+    "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.8.4",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
