--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ntua/SoftEng22-22#readme",
   "dependencies": {
+    "@mdi/js": "^7.1.96",
     "@vue/cli-service": "^5.0.8",
     "axios": "^1.2.3",
     "body-parser": "^1.20.1",
@@ -33,6 +34,7 @@
     "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "mongoose": "^6.8.4",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
@@ -40,6 +42,7 @@
     "vuetify": "^3.1.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "nodemon": "^2.0.20",
     "vue-cli-plugin-vuetify": "~2.5.8"
   }
