--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "material-design-icons-iconfont": "^6.7.0",
-    "mongoose": "^6.8.4",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.3"
+    "vuetify": "^3.1.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
