--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "bin": {
+    "se2222": "./cli/bin/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ntua/SoftEng22-22.git"
