--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "custom-env": "^2.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "json2csv": "^6.0.0-alpha.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "pinia": "^2.0.29",
