--- a/package.json
+++ b/package.json
@@ -44,11 +44,30 @@
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.3"
+    "vuetify": "^3.1.3",
+    "@octokit/auth-basic": "^1.4.8",
+    "@octokit/rest": "^18.1.1",
+    "boxen": "^4.0.0",
+    "chalk": "^2.4.2",
+    "clear": "^0.1.0",
+    "clui": "^0.3.6",
+    "collections": "^5.1.12",
+    "commander": "^7.1.0",
+    "configstore": "^5.0.1",
+    "figlet": "^1.5.0",
+    "inquirer": "^7.3.3",
+    "minimist": "^1.2.6",
+    "request": "^2.88.2",
+    "simple-git": "^3.16.0",
+    "touch": "^3.1.0",
+    "yargs": "^13.2.4"
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
     "nodemon": "^2.0.20",
-    "vue-cli-plugin-vuetify": "~2.5.8"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "chai": "^4.3.4",
+    "jest": "^26.6.3",
+    "mocha": "^10.2.0"
   }
 }
