--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "picocolors": "^1.0.0",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
