--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
+    "mongo-tools": "^1.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "pinia": "^2.0.29",
