--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,7 @@
     "main": "bin/index.js",
     "scripts": {
         "test": "mocha test/**.test.js"
-      },
+    },
     "author": "",
     "license": "",
     "bin": {
@@ -22,10 +22,13 @@
         "collections": "^5.1.12",
         "commander": "^7.1.0",
         "configstore": "^5.0.1",
+        "express": "^4.18.2",
         "figlet": "^1.5.0",
+        "form-data": "^4.0.0",
         "inquirer": "^7.3.3",
         "lodash": "^4.17.21",
         "minimist": "^1.2.6",
+        "multer": "^1.4.5-lts.1",
         "request": "^2.88.2",
         "simple-git": "^3.16.0",
         "touch": "^3.1.0",
